cargo-smart-release/src/changelog/tests/snapshots/cargo_smart_release__changelog__tests__write_and_parse__all_section_types_round_trip-2.snap
---
source: cargo-smart-release/src/changelog/tests/mod.rs
expression: md

---
# Changelog

my very own header

## Unreleased
<csm-unknown>
hello
world
<csm-unknown/>

#### v1.0.2-beta.2 (1970-01-01)


